galley/pkg/config/analysis/analyzers/testdata/mtls-exports.yaml
# We have two namespaces. A service in primary has MTLS specified and a DR, but
# its not exported. This should cause traffic from secondary to fail.
# Note that we also have a service in secondary with an identical DR, but its
# exported publicly so no problems occur.
apiVersion: v1
kind: Namespace
metadata:
  name: primary
---
apiVersion: v1
kind: Namespace
metadata:
  name: secondary
---
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: default
  namespace: primary
spec:
  targets:
  - name: myservice
  peers:
  - mtls:
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: primary
spec:
  host: myservice.primary.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  exportTo:
  - "."
---
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: default
  namespace: secondary
spec:
  targets:
  - name: myotherservice
  peers:
  - mtls:
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: secondary
spec:
  host: myotherservice.secondary.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  exportTo:
  - "*"
